[package]
name = "grr"
version = "0.2.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
description = "Bare metal OpenGL 4.5+ wrapper"
homepage = "https://github.com/msiglreith/grr"
repository = "https://github.com/msiglreith/grr"
keywords = ["graphics"]
documentation = "https://docs.rs/grr"
license = "MPL-2.0"
exclude = [
    "info/*",
]
build = "build.rs"

[dependencies]
bitflags = "1"

[dev-dependencies]
assimp = "0.3"
glutin = "0.12"
image = "0.20"

[build-dependencies]
gl_generator = "0.10"

