[package]
name = "grr"
version = "0.6.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
description = "Bare metal OpenGL 4.5+ wrapper"
homepage = "https://github.com/msiglreith/grr"
repository = "https://github.com/msiglreith/grr"
keywords = ["graphics"]
documentation = "https://docs.rs/grr"
license = "MPL-2.0"
exclude = [
    "examples/*",
    "info/*",
]
build = "build.rs"

[dependencies]
bitflags = "1"

[dev-dependencies]
assimp = "0.3"
assimp-sys = "0.3"
glutin = "0.19"
image = "0.20"
nalgebra-glm = "0.2"
rand = "0.6"
ndarray = "0.12"

[build-dependencies]
gl_generator = "0.10"

[[example]]
name = "device"
path = "examples/device.rs"

[[example]]
name = "triangle"
path = "examples/triangle.rs"

[[example]]
name = "texture"
path = "examples/texture.rs"

[[example]]
name = "pbr"
path = "examples/pbr/pbr.rs"
