[package]
name = "grr"
version = "0.7.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
description = "Bare metal OpenGL 4.5+ wrapper"
homepage = "https://github.com/msiglreith/grr"
repository = "https://github.com/msiglreith/grr"
keywords = ["graphics"]
edition = "2018"
documentation = "https://docs.rs/grr"
license = "MIT OR Apache-2.0"
exclude = [
    "examples/*",
    "info/*",
]
build = "build.rs"

[dependencies]
bitflags = "1"

[dev-dependencies]
assimp = "0.3"
assimp-sys = "0.3"
glutin = "0.21"
image = "0.22"
nalgebra-glm = "0.4"
rand = "0.7"
ndarray = "0.13"

[build-dependencies]
gl_generator = "0.14"

[[example]]
name = "device"
path = "examples/device.rs"

[[example]]
name = "triangle"
path = "examples/triangle.rs"

[[example]]
name = "texture"
path = "examples/texture.rs"

[[example]]
name = "pbr"
path = "examples/pbr/pbr.rs"

[[example]]
name = "multi_context"
path = "examples/multi_context.rs"
